--- a/client/src/pages/employee/Employee.css
+++ b/client/src/pages/employee/Employee.css
@@ -6,3 +6,34 @@
     margin: 25px 0;
     max-width: 280px;
 }
+.all-employee-container{
+    margin:20px 100px;
+}
+
+.employee-add{
+    background-color: #d839ff;
+    color:white;
+    margin: 15px;
+    border: #F1B7FF;
+    float: right;
+}
+
+.employee-add:hover{
+    background-color: #F1B7FF;
+}
+
+.employee-table .ant-table-thead .ant-table-cell{
+    background-color: #d839ff;
+    color: white;
+}
+
+.employee-upload{
+    background-color: #d839ff;
+    color:white;
+    margin: 15px;
+    border: #F1B7FF;
+    float: right;
+    font-size: 16px;
+    padding: 5px 10px;
+    cursor: pointer;
+}
