--- a/client/src/pages/employee/Employee.css
+++ b/client/src/pages/employee/Employee.css
@@ -37,3 +37,42 @@
     padding: 5px 10px;
     cursor: pointer;
 }
+
+.employee-info-container{
+        
+    background: #FFFCFC;
+    border: 1px solid #C5CCD6;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    min-height: 80px;
+    margin: 15px 50px;
+    padding: 15px 30px;
+    font-family: var(--Inter);
+    font-size: 18px;
+}
+
+.employee-info-container p{
+    margin-bottom: 0;
+
+}
+.single-employee-container{
+    background-color: #F4F4F4;
+    height: 100vh;
+    margin-left: 64px;
+}
+
+.employee-chat-container{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    margin: 15px 50px;
+}
+.employee-chat{
+         
+    background: #FFFCFC;
+    border: 1px solid #C5CCD6;
+    box-sizing: border-box;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    min-height: 180px;
+    flex: 1;
+}
